incorrect content size after keyboard closed with dismiss button

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,110 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      iPad Keyboard
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12">
+        <form>
+          <input type="text" [value]="quantity" />
+        </form>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="12">
+        <ion-text>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis posuere ex. Donec scelerisque eros
+            at
+            pulvinar sollicitudin. Sed dapibus quam quis mollis sodales. Morbi dolor lectus, fringilla eu aliquet in,
+            porttitor
+            in velit. Sed non varius massa. Donec non arcu aliquet, sodales tortor eget, pretium dolor. Nam urna neque,
+            lobortis
+            vel interdum et, cursus eu est. Maecenas venenatis rhoncus lacus et eleifend. Maecenas eleifend justo magna,
+            at
+            maximus metus congue a. Etiam lorem tortor, elementum nec mauris sit amet, accumsan ultrices massa.
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+            Integer id sagittis est. Mauris id molestie sem. Phasellus egestas arcu non mauris finibus, non egestas
+            libero
+            rutrum. Aenean finibus sit amet nibh et cursus. Fusce iaculis feugiat tincidunt. Cras in tempor leo. Sed ut
+            libero
+            mauris. Vestibulum nec mattis enim. Vestibulum nec ultrices mi. Etiam aliquet porttitor turpis, id
+            ullamcorper
+            tellus pellentesque nec. Duis dapibus consectetur magna nec varius. Curabitur ut sem in est suscipit
+            fermentum
+            egestas eget magna.
+          </p>
+          <p>
+            Morbi est tortor, luctus et tellus at, interdum aliquam quam. Nulla sed augue nec ipsum condimentum
+            facilisis.
+            Integer eu est in nisl aliquam rutrum quis quis libero. Ut fringilla nulla sit amet vestibulum condimentum.
+            Vestibulum porta tristique ante, quis placerat metus condimentum sed. Sed viverra erat eu purus pretium
+            faucibus.
+            Duis in tincidunt urna, et ultrices libero. In faucibus velit libero, quis laoreet ipsum blandit a.
+            Vestibulum
+            ante
+            ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed non varius lorem. Phasellus
+            lobortis
+            felis nec dapibus ultrices. Curabitur viverra a erat eu convallis.
+          </p>
+          <p>
+            Cras imperdiet mauris vitae libero luctus bibendum. Morbi molestie nunc in neque suscipit sagittis. Nullam
+            commodo,
+            ipsum et malesuada pulvinar, lorem justo tempus augue, rhoncus ullamcorper est massa quis dui. Pellentesque
+            habitant
+            morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi bibendum fringilla neque, a
+            mollis
+            urna vulputate eget. Duis tristique nulla neque, ut laoreet lacus gravida at. Pellentesque ornare aliquet
+            posuere.
+            Aliquam viverra ullamcorper mauris, nec commodo ligula sodales at. Curabitur et porta metus, in viverra
+            velit.
+            Sed
+            auctor velit sit amet mollis tristique. Etiam ac tristique nisi. Pellentesque id tortor ultrices, varius
+            metus
+            eu,
+            bibendum nunc.
+          </p>
+          <p>
+            Cras imperdiet mauris vitae libero luctus bibendum. Morbi molestie nunc in neque suscipit sagittis. Nullam
+            commodo,
+            ipsum et malesuada pulvinar, lorem justo tempus augue, rhoncus ullamcorper est massa quis dui. Pellentesque
+            habitant
+            morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi bibendum fringilla neque, a
+            mollis
+            urna vulputate eget. Duis tristique nulla neque, ut laoreet lacus gravida at. Pellentesque ornare aliquet
+            posuere.
+            Aliquam viverra ullamcorper mauris, nec commodo ligula sodales at. Curabitur et porta metus, in viverra
+            velit.
+            Sed
+            auctor velit sit amet mollis tristique. Etiam ac tristique nisi. Pellentesque id tortor ultrices, varius
+            metus
+            eu,
+            bibendum nunc.
+          </p>
+          <p>
+            Cras imperdiet mauris vitae libero luctus bibendum. Morbi molestie nunc in neque suscipit sagittis. Nullam
+            commodo,
+            ipsum et malesuada pulvinar, lorem justo tempus augue, rhoncus ullamcorper est massa quis dui. Pellentesque
+            habitant
+            morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi bibendum fringilla neque, a
+            mollis
+            urna vulputate eget. Duis tristique nulla neque, ut laoreet lacus gravida at. Pellentesque ornare aliquet
+            posuere.
+            Aliquam viverra ullamcorper mauris, nec commodo ligula sodales at. Curabitur et porta metus, in viverra
+            velit.
+            Sed
+            auctor velit sit amet mollis tristique. Etiam ac tristique nisi. Pellentesque id tortor ultrices, varius
+            metus
+            eu,
+            bibendum nunc.
+          </p>
+        </ion-text>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
